2017-08-22  Danilo Chang

     * Bump version to v0.2
     * Fix openSUSE spec: setup CC to g++
     * Add database repair/destroy command
     * Add getProperty/getName/getApproximateSizes implement

2017-08-21  Danilo Chang

     * Bump version to v0.1.1
     * Add compression type option support

2017-08-20  Danilo Chang

     * Add basic function: put/get/delete/exists
     * Implement rocksdb command

2017-08-19  Danilo Chang

     * Dump sample extension
