@@ -1,3 +1,7 @@
+2017-08-23  Danilo Chang
+
+    * Update DB_HANDLE get/delete command
+
 2017-08-22  Danilo Chang
 
      * Bump version to v0.2
